kubernetes/lol/n8n-ha/05-service-n8n.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  namespace: n8n-ha
spec:
  selector:
    app: n8n
    role: main
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
